# KLAIC

./: .gitattributes  LICENSE  README.md
KLAIC/: MANIFEST.in  pyproject.toml
KLAIC/examples/: run_example.py
KLAIC/examples/data/: expr.tsv
KLAIC/examples/results/: klaic_kinase_activity.csv
KLAIC/src/klaic/: __init__.py  cli.py  functions.py  pipeline.py
KLAIC/src/klaic/data/: curated_lib.csv  deep_loc.pkl  kl_kinase_gname2uid.pkl  string400.pkl  string700.pkl  uniprot_human_protein_uid2gname.pkl
paper_code/data/: deeploc.xlsx  human_pk.xlsx  meta_human_pk.csv  networkin_human_predictions_3.1.tsv  uniprot_human_protein.json
paper_code/results/: benchmark_results.csv  benchmark_results_same_kinase.csv
paper_code/results/deeploc/: benchmark_results.parquet  benchmark_results_same_kinase.parquet  ksr_curated_kl0.975.parquet  ksr_curated_kl0.99.parquet  ksr_curated_kl0.99_top10.parquet  ksr_curated_kl0.99_top20.parquet  ksr_curated_kl0.99_top50.parquet  ksr_curated_networkin.parquet  zscore_curated_kl0.9.parquet  zscore_curated_kl0.95.parquet  zscore_curated_kl0.975.parquet  zscore_curated_kl0.99.parquet  zscore_curated_kl0.99_top10.parquet  zscore_curated_kl0.99_top20.parquet  zscore_curated_kl0.99_top50.parquet  zscore_curated_networkin.parquet
paper_code/results/string400/: benchmark_results.parquet  benchmark_results_same_kinase.parquet  (+16 more)
paper_code/scripts/: 1-1.process_unfiltered_library.py  1-2.process_string_library.py  1-3.process_deeploc_library.py  2.infer_activity.py  3-1.run_evaluation.py  3-2.merge_evaluation_results.py  utils.py
(+35 files in other folders)
