[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KLAIC"
version = "0.1.0"
description = "Kinase Library-based Activity Inference with Context constraints from phosphoproteomics log2FC."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "KLAIC developers"}]
dependencies = [
    "numpy",
    "pandas",
    "joblib",
    "tqdm",
    "kinase_library"
]

[project.optional-dependencies]
dev = ["pytest", "build"]

[project.scripts]
klaic = "klaic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
klaic = [
    "data/*",
    "_vendor/kl_src/*",
    "_vendor/kl_src/**/*",
]
